--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "api"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "type": "commonjs",
   "dependencies": {
     "express": "^4.18.2",
